--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Artist Tiles</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <h1>Artist Tiles</h1>
@@ -46,5 +46,6 @@
         <img src="./imgs/troye_sivan.jpg" alt="Troye Sivan" />
       </div>
     </div>
+    <script src="./script.js"></script>
   </body>
 </html>
