img click event

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <img src="./imgs/troye_sivan.jpg" alt="Troye Sivan" />
       </div>
     </div>
+    <script src="./grid.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
