modal and audio

--- a/index.html
+++ b/index.html
@@ -10,43 +10,63 @@
     <h1>Artist Tiles</h1>
     <div class="container">
       <div class="img-box">
-        <img src="./imgs/easy_life.jpg" alt="Easy Life" />
+        <img src="./images/easy_life.jpg" alt="Easy Life" />
       </div>
       <div class="img-box">
-        <img src="./imgs/heyden.jpg" alt="Heyden" />
+        <img src="./images/heyden.jpg" alt="Heyden" />
       </div>
       <div class="img-box">
-        <img src="./imgs/ariana_grande.jpg" alt="Ariana Grande" />
+        <img src="./images/ariana_grande.jpg" alt="Ariana Grande" />
       </div>
       <div class="img-box">
-        <img src="./imgs/almost_monday.jpg" alt="Almost Monday" />
+        <img src="./images/almost_monday.jpg" alt="Almost Monday" />
       </div>
       <div class="img-box">
-        <img src="./imgs/benee.jpg" alt="Benee" />
+        <img src="./images/benee.jpg" alt="Benee" />
       </div>
       <div class="img-box">
-        <img src="./imgs/clay_and_friends.jpg" alt="Clay And Friends" />
+        <img src="./images/clay_and_friends.jpg" alt="Clay And Friends" />
       </div>
       <div class="img-box">
-        <img src="./imgs/harry_styles.jpg" alt="Harry Styles" />
+        <img src="./images/harry_styles.jpg" alt="Harry Styles" />
       </div>
       <div class="img-box">
-        <img src="./imgs/imaginedragons.jpg" alt="Imaginedragons" />
+        <img src="./images/imaginedragons.jpg" alt="Imaginedragons" />
       </div>
       <div class="img-box">
-        <img src="./imgs/jack_stauber.jpg" alt="Jack Stauber" />
+        <img src="./images/jack_stauber.jpg" alt="Jack Stauber" />
       </div>
       <div class="img-box">
-        <img src="./imgs/johnny_stimson.jpg" alt="Johnny Stimson" />
+        <img src="./images/johnny_stimson.jpg" alt="Johnny Stimson" />
       </div>
       <div class="img-box">
-        <img src="./imgs/tayo_sound.jpg" alt="Tayo Sound" />
+        <img src="./images/tayo_sound.jpg" alt="Tayo Sound" />
       </div>
       <div class="img-box">
-        <img src="./imgs/troye_sivan.jpg" alt="Troye Sivan" />
+        <img src="./images/troye_sivan.jpg" alt="Troye Sivan" />
       </div>
     </div>
+    <!-- modal -->
+    <div class="modal">
+      <div class="modal-content">
+        <span class="modal-close">&times;</span>
+        <p>Some text..</p>
+        <!-- audio control -->
+        <div class="audio-wave"></div>
+        <div class="audio-control">
+          <div class="play-btn"></div>
+          <div class="progress"></div>
+          <div class="volume-control"></div>
+        </div>
+        <!-- // audio control -->
+      </div>
+    </div>
+    <!-- // modal -->
     <script src="./grid.js"></script>
-    <script src="./script.js"></script>
+    <script type="module" src="./modal.js"></script>
+    <script type="module" src="./script.js"></script>
   </body>
 </html>
+
+<!-- https://codepen.io/EmNudge/pen/rRbLJQ : how to custom audio control -->
+<!-- https://mjmjmj98.tistory.com/31 : how to control audio in js -->
