--- a/index.html
+++ b/index.html
@@ -49,16 +49,21 @@
     <!-- modal -->
     <div class="modal">
       <div class="modal-content">
-        <span class="modal-close">&times;</span>
+        <span class="modal-close">✖</span>
         <p>Some text..</p>
-        <!-- audio control -->
+        <!-- audio player -->
         <div class="audio-wave"></div>
         <div class="audio-control">
-          <div class="play-btn"></div>
+          <div class="play-btn play">▶</div>
           <div class="progress"></div>
-          <div class="volume-control"></div>
+          <div class="volume-control">
+            <div class="volume-btn">🔊</div>
+            <div class="volume-slider">
+              <div class="volume-percentage"></div>
+            </div>
+          </div>
         </div>
-        <!-- // audio control -->
+        <!-- // audio player -->
       </div>
     </div>
     <!-- // modal -->
