music load when click img

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <div class="volume-btn-container">
                 <i class="volume-btn fas fa-volume-up fa-lg"></i>
               </div>
-              <!-- volume-down volume-off volume-mute -->
+              <!-- volume-down volume-off -->
               <div class="volume-slider">
                 <div class="volume-percentage"></div>
               </div>
@@ -81,7 +81,7 @@
   </body>
 </html>
 
-<!-- TODO : h1 마진 -->
+<!-- TODO: h1 마진 -->
 
 <!-- https://codepen.io/EmNudge/pen/rRbLJQ : how to custom audio control -->
 <!-- https://mjmjmj98.tistory.com/31 : how to control audio in js -->
