--- a/index.html
+++ b/index.html
@@ -85,3 +85,4 @@
 
 <!-- https://codepen.io/EmNudge/pen/rRbLJQ : how to custom audio control -->
 <!-- https://mjmjmj98.tistory.com/31 : how to control audio in js -->
+<!-- http://wavesurfer-js.org/docs/methods.html wavesurfer method api doc -->
