--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
   </head>
   <body>
+    <!-- TODO: h1 margin -->
     <h1>Artist Tiles</h1>
     <div class="container">
+      <!-- TODO: create elements dynamically -->
       <div class="img-box">
         <img src="./images/easy_life.jpg" alt="Easy Life" />
       </div>
@@ -73,16 +75,12 @@
       </div>
     </div>
     <!-- // modal -->
-    <script src="./grid.js"></script>
-    <script type="module" src="./script.js"></script>
-    <script type="module" src="./modal.js"></script>
     <script src="https://unpkg.com/wavesurfer.js"></script>
+    <script type="module" src="./script.js"></script>
+    <script type="module " src="./grid.js"></script>
+    <script type="module" src="./modal.js"></script>
     <script type="module" src="./wave.js"></script>
   </body>
 </html>
 
-<!-- TODO: h1 마진 -->
-
-<!-- https://codepen.io/EmNudge/pen/rRbLJQ : how to custom audio control -->
-<!-- https://mjmjmj98.tistory.com/31 : how to control audio in js -->
 <!-- http://wavesurfer-js.org/docs/methods.html wavesurfer method api doc -->
