refactoring for closeModal()

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     <script type="module " src="./grid.js"></script>
     <script type="module" src="./modal.js"></script>
     <script type="module" src="./wave.js"></script>
+    <script type="module" src="./volume.js"></script>
   </body>
 </html>
 
