load tiles dynamically

--- a/index.html
+++ b/index.html
@@ -10,45 +10,7 @@
   <body>
     <!-- TODO: h1 margin -->
     <h1>Artist Tiles</h1>
-    <div class="container">
-      <!-- TODO: create elements dynamically -->
-      <div class="img-box">
-        <img src="./images/easy_life.jpg" alt="Easy Life" />
-      </div>
-      <div class="img-box">
-        <img src="./images/heyden.jpg" alt="Heyden" />
-      </div>
-      <div class="img-box">
-        <img src="./images/ariana_grande.jpg" alt="Ariana Grande" />
-      </div>
-      <div class="img-box">
-        <img src="./images/almost_monday.jpg" alt="Almost Monday" />
-      </div>
-      <div class="img-box">
-        <img src="./images/benee.jpg" alt="Benee" />
-      </div>
-      <div class="img-box">
-        <img src="./images/clay_and_friends.jpg" alt="Clay And Friends" />
-      </div>
-      <div class="img-box">
-        <img src="./images/harry_styles.jpg" alt="Harry Styles" />
-      </div>
-      <div class="img-box">
-        <img src="./images/imaginedragons.jpg" alt="Imaginedragons" />
-      </div>
-      <div class="img-box">
-        <img src="./images/jack_stauber.jpg" alt="Jack Stauber" />
-      </div>
-      <div class="img-box">
-        <img src="./images/johnny_stimson.jpg" alt="Johnny Stimson" />
-      </div>
-      <div class="img-box">
-        <img src="./images/tayo_sound.jpg" alt="Tayo Sound" />
-      </div>
-      <div class="img-box">
-        <img src="./images/troye_sivan.jpg" alt="Troye Sivan" />
-      </div>
-    </div>
+    <div class="container"></div>
     <!-- modal -->
     <div class="modal">
       <div class="modal-content">
@@ -76,6 +38,7 @@
     <!-- // modal -->
     <script src="https://unpkg.com/wavesurfer.js"></script>
     <script type="module" src="./script.js"></script>
+    <script type="module" src="./tiles.js"></script>
     <script type="module " src="./grid.js"></script>
     <script type="module" src="./modal.js"></script>
     <script type="module" src="./wave.js"></script>
