--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Artist Tiles</title>
-    <link rel="stylesheet" href="./style.css" />
+    <!-- TODO: seperate css -->
+    <link rel="stylesheet" href="./css/style.css" />
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
   </head>
   <body>
@@ -37,12 +38,12 @@
     </div>
     <!-- // modal -->
     <script src="https://unpkg.com/wavesurfer.js"></script>
-    <script type="module" src="./script.js"></script>
-    <script type="module" src="./tiles.js"></script>
-    <script type="module " src="./grid.js"></script>
-    <script type="module" src="./modal.js"></script>
-    <script type="module" src="./wave.js"></script>
-    <script type="module" src="./volume.js"></script>
+    <script type="module" src="./js/script.js"></script>
+    <script type="module" src="./js/tiles.js"></script>
+    <script type="module " src="./js/grid.js"></script>
+    <script type="module" src="./js/modal.js"></script>
+    <script type="module" src="./js/wave.js"></script>
+    <script type="module" src="./js/volume.js"></script>
   </body>
 </html>
 
