--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       </div>
     </div>
     <!-- // modal -->
+    <script src="./api_test.js"></script>
     <script src="https://unpkg.com/wavesurfer.js"></script>
     <script type="module" src="./js/script.js"></script>
     <script type="module" src="./js/tiles.js"></script>
