query object to querystring

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     </div>
     <!-- // modal -->
     <script src="./tests/api_test.js"></script>
+    <script src="./tests/obj2str.js"></script>
     <script src="https://unpkg.com/wavesurfer.js"></script>
     <script type="module" src="./js/script.js"></script>
     <script type="module" src="./js/tiles.js"></script>
