ERR : not working mini player & cant show audio control in modal

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
     </div>
     <!-- // modal -->
-    <script src="./tests/api_test.js"></script>
+    <!-- <script src="./tests/api_test.js"></script> -->
     <script src="https://unpkg.com/wavesurfer.js"></script>
     <script type="module" src="./js/script.js"></script>
   </body>
