add temp favicon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Artist Tiles</title>
+    <link
+      rel="shortcut icon"
+      href="https://img.icons8.com/nolan/64/audio-wave.png"
+      type="image/png"
+    />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/modal.css" />
     <link rel="stylesheet" href="./css/audio_control.css" />
