Err setGrid() doesn's work when the first entered
vscode의 웹 서버 문제인가 싶어 자체 서버를 파봤지만 소용없음

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <!-- // audio player -->
       </div>
     </div>
+    <a href="https://localhost:5500/">Link</a>
     <!-- // modal -->
     <!-- <script src="./tests/api_test.js"></script> -->
     <script src="https://unpkg.com/wavesurfer.js"></script>
