--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
       href="https://img.icons8.com/nolan/64/audio-wave.png"
       type="image/png"
     />
+    <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
+    <script src="https://unpkg.com/wavesurfer.js"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
