set grid with bootstrap-vue
Err: in specific width of window, has infinity changing height of window

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,9 @@
       href="https://img.icons8.com/nolan/64/audio-wave.png"
       type="image/png"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css?family=Lora:400,700|Montserrat:300"
+      href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@600&display=swap"
       rel="stylesheet"
     />
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
